Issue: Signup Modal closing upon clicking on the white space above the input box Solution: Added Styling and respective classes to make it full height for the container

--- a/app/main.css
+++ b/app/main.css
@@ -169,6 +169,10 @@ footer li:hover {
   flex-shrink: 0;
 }
 
+.firefox-signup-logo {
+  margin-bottom: 130px;
+}
+
 #password-msg::after {
   content: '\200b';
 }
@@ -287,4 +291,11 @@ select {
 
 .word-break-all {
   word-break: break-all;
+}
+
+@media screen and (max-width: 768px) {
+  .firefox-signup-logo {
+    margin-bottom: 0;
+    margin-top: 90px;
+  }
 }
